see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

15-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file sy-IQ + missing strings in en-AU, en-US and gu-IN
 + [#28629] Multi-File Upload. Thanks Elijah
 
14-Jun-2012 Christophe Demko
 ^ [#28667] Update TinyMCE to version 3.5.2 (Rouven Weßling)

14-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file ca-ES

13-Jun-2012 Jean-Marie Simonet
 $ Updating installation ini file fa-IR

12-Jun-2012 Jean-Marie Simonet
 # [#28660] Fix code style errors. Thanks Jenkins and Rouven
 # [#28632] Backport JCrypt (only with the simple chipher). Thanks Rouven
 + [#28371] Improve user feedback during automatic version update. Thanks Mark
 # [#28591] Content triggers in Category and Featured views only apply to first few articles. Thanks Kyle.

11-Jun-2012 Jean-Marie Simonet
 $ [#28371] Improve user feedback during automatic version update. Lang strings only!
 # [#28652] *Strict standards administrator/components/com_config/models/application.php
 ^ [#28380] *Normalizing Beez_20 css and js loading
 ^ [#28642] Clean up the installation a tiny bit. Thanks Rouven
 # [#28025] Joomla Bugfix: Exchange of wrong picture by hide.js fixed. Thanks Udo
 ^ [#28645] Clean up the session package based on what was done in the platform. Thanks Rouven
 $ Updating installation ini file th-TH

10-Jun-2012 Jean-Marie Simonet
 # [#28426] only a single JFormFieldColor field can exist (functionally) within a form. Thanks Dennis
 # [#28550] Default admin user created with id 42. Thanks Ofer
 # [#28646] *New user registration approval should only be possible when Create permission