@@ -26,6 +26,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+15-Jun-2012 Christophe Demko
+ # [#28670] SQL error when installing trunk without sample data (Ofer Cohen)
+
 15-Jun-2012 Jean-Marie Simonet
  $ Updating installation ini file sy-IQ + missing strings in en-AU, en-US and gu-IN
  + [#28629] Multi-File Upload. Thanks Elijah
